--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             text-break: normal;
             text-align: justify;
             text-justify: inter-ideograph;
+            white-space: break-spaces;
         }
         @media (max-width: 768px) {
             textarea {
