--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             text-break: normal;
             text-align: justify;
             text-justify: inter-ideograph;
-            white-space: break-spaces;
         }
         @media (max-width: 768px) {
             textarea {
@@ -79,7 +78,8 @@
         }
     </style>
     <div id="app">
-        <textarea placeholder="请输入西语内容 / Please enter the word or article in Spanish" cols="80" rows="30"></textarea><div id="preview">
+        <textarea placeholder="请输入西语内容 / Please enter the word or article in Spanish" cols="80" rows="30"></textarea>
+        <div id="preview">
             <p>✔ 该网站用于帮助初学西语的人更快的练习正确的发音</p>
             <p>✔ 请在另一侧输入西语单词或短文，将在这一侧显示每个单词的分音节和音节的重读</p>
             <p>✔ 点击单词可以发音，如果无法使用，请更换 PC 的 Chrome 浏览器</p>
