修复macos样式问题 修复macos发音问题

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             text-break: normal;
             text-align: justify;
             text-justify: inter-ideograph;
+            vertical-align: top;
         }
         @media (max-width: 768px) {
             textarea {
