--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         rt span {
             font-size:12px;
         }
+        body {
+            padding-bottom: 20px;
+        }
     </style>
     <div id="app">
         <textarea placeholder="请输入西语内容 / Please enter the word or article in Spanish" cols="80" rows="30"></textarea>
